[package]
name = "async-q-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["rt", "sync"] }
thiserror = "1.0.40"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["rt", "macros", "time"] }
anyhow = "1.0.70"
